fix compose to work on linux

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,8 +12,7 @@ services:
     depends_on:
       - agent
     command: 172.16.0.0/24
-    build:
-      dockerfile: ./Dockerfile
+    build: .
 
 networks:
   default:
